--- a/sivir/config/sivir_config.json
+++ b/sivir/config/sivir_config.json
@@ -1,5 +1,5 @@
 {
-    api_key: "",
+    "api_key": "APIKEY HERE",
     "production_url": "https://prod.api.pvp.net/api/lol/",
-    "version": "v1.4"
+    "api_version": "v1.4"
 }
